styles/style.css
/**********************************************************************/
/* select styles */

.select select {
    background-color: #343c3d;
    color: white;
    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    font-weight: 400;
    font-size: 15px;    
    border-color: #8C9B9D;
}

.select:not(.is-multiple):not(.is-loading)::after {
    border-color: #8c9b9d;
}

select select.is-hovered, .select select:hover {
    border-color: #ffffff;
}

.select select.is-active, .select select.is-focused, .select select:active, .select select:focus {
    border-color: #ffffff;    
}

.select select[disabled]:-moz-placeholder, .select select[disabled]::-moz-placeholder {
    color: rgba(255, 255, 255, .3);
}

.select select[disabled]::-webkit-input-placeholder {
    color: rgba(255, 255, 255, .3);
}

.select select[disabled]:-ms-input-placeholder {
    color: rgba(255, 255, 255, .3);
}

.select select::-moz-placeholder {
    color: white;
}

.select select::-webkit-input-placeholder {
    color: white;
}

/**********************************************************************/
/* button styles */

.button {
    background-color: #343c3d;
    color: white;
    border-color: #8c9b9d;
}

.button:not(.is-multiple):not(.is-loading)::after {
    border-color: #8c9b9d;
}

button button.is-hovered, .button button:hover {
    border-color: #ffffff;
}

.button.is-focused, .button:focus {
    border-color: #ffffff;
    color: white;
}

.field.has-addons .control:first-child .button {
    border-top-left-radius:0.4rem;
    border-bottom-left-radius:0.4rem
}

.button:hover {
    border-color: white;    
}

/**********************************************************************/
/* input styles */

.input {
    background-color: #343c3d;
    color: white;
    border-color: #8c9b9d;
}

.input:hover {
    border-color: white;    
}

.input[disabled]:-moz-placeholder, .input[disabled]::-moz-placeholder {
    color: rgba(255, 255, 255, .3);
}

.input[disabled]::-webkit-input-placeholder {
    color: rgba(255, 255, 255, .3);
}

.input[disabled]:-ms-input-placeholder {
    color: rgba(255, 255, 255, .3);
}

.field.has-addons .control:last-child .input {
    border-top-left-radius:0.4rem;
    border-bottom-left-radius:0.4rem
}

.input:-moz-placeholder, .input::-moz-placeholder {
    color: white;
}

.input::-webkit-input-placeholder {
    color: white;
}

.input:-ms-input-placeholder {
    color: white;
}

/**********************************************************************/
/* textarea */

.textarea {
    background-color: #343c3d;
    color: white;
    border-color: #8c9b9d;
}

.textarea:-moz-placeholder, .textarea::-moz-placeholder {
    color: white;
}

.textarea::-webkit-input-placeholder {
    color: white;
}

.textarea:-ms-input-placeholder {
    color: white;
}

.textarea[disabled]:-moz-placeholder, .textarea[disabled]::-moz-placeholder {
    color: rgba(255, 255, 255, .3);
}

.textarea[disabled]::-webkit-input-placeholder {
    color: rgba(255, 255, 255, .3);
}

.textarea[disabled]:-ms-input-placeholder {
    color: rgba(255, 255, 255, .3);
}


/**********************************************************************/
/* label styles */

.label { 
    font-weight: 400;
    color: white;
}

/**********************************************************************/
/* radio styles */

.radio {
    padding-left:0.5rem;
    padding-right:0.5rem;
}

/*********************************************************************/
/* Bulma various styles */

.tile {
    margin: 0.1rem;
    border-radius: 14px;
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.section {
    padding: 1.5rem 1.5rem;
}

.subtitle {
    color: #ffffff;
}

.pagination-link, .pagination-next, .pagination-previous {
    border-color: #5e6d6f;
    color: #ffffff;
    min-width: 2.25em;
}

.pagination-link:hover, .pagination-next:hover, .pagination-previous:hover {
    border-color: #ffffff;
    color: #ffffff;
}


/***********************************************************************/
/* Common meal styles */

.meal-chef-box {
    border: 1px solid black;   
    border-radius: 8px;
    border: 1px solid black;
    overflow: hidden;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem !important;
    padding-left: 0rem !important;
    padding-right: 0rem !important;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.meal-chef-row {
    padding: 6px;
}

.meal-chef-ok {
    color: #1abc9c80 !important;
}

.meal-chefs-ok {
    background-color: /*rgba(0, 180, 0, 0.3);*/ #1abc9c50;
}

.meal-chefs-missingsome {
    background-color: rgba(180, 120, 0, 0.3);
}

.meal-reservation-group {
    border-radius: 8px;
    border: 1px solid black;
    overflow: hidden;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem !important;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem ;
    padding-left: 0rem !important;
    padding-right: 0rem !important;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.meal-reservation-row {    
    padding: 6px;
}

.meal-reservation-row-even {
    background: black;        
}

.meal-reservation-row-odd {
    background: #343c3d;
}

.mobile-hidden {
    display: none;
}
  
@media screen and (max-width:768px) {  
    .is-hidden-mobile-bottommarginfix {
      margin-bottom: 0rem !important;
    }
}

@media screen and (min-width:769px) {
    .is-visible-mobile-only {
        display: none !important;
    }
}

@media screen and (max-width:769px) {
    .is-visible-mobile-only {        
    }
}

fieldset {
    border: none;
}

.button.is-static {
    background-color: #343c3d;
    border-color: rgb(140, 155, 157);;
}

.input[disabled] {
    cursor: auto;
    background-color: #545c5d;
    border-color: #8c9b9d;
    color: white;
}

